Added the Projects, skills & Navbar with Language select menu

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -34,5 +34,7 @@
         "imageSrc": "../src/assets/angry-bird.JPG",
         "url": "https://vidishashah25.github.io/angrybird-shoot-game/index.html"
       }
-    ]
+    ],
+    "contact": "Lassen Sie uns in Kontakt treten.",
+    "contact-subheading" : "Fühlen Sie sich frei, mich per E-Mail zu kontaktieren oder sich mit mir auf LinkedIn zu vernetzen. Ich freue mich über jede Gelegenheit, mich zu verbinden und an sinnvollen Gesprächen teilzunehmen. Wenn Sie Fragen haben, Hilfe benötigen oder einfach nur 'Hallo' sagen möchten, zögern Sie nicht, mir eine E-Mail zu schreiben. Ich bin immer begeistert, mit gleichgesinnten Fachleuten zusammenzuarbeiten, Einsichten zu teilen und neue Ideen zu erkunden."
 }
