--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -34,6 +34,7 @@
         "imageSrc": "../src/assets/angry-bird.JPG",
         "url": "https://vidishashah25.github.io/angrybird-shoot-game/index.html"
       }
-    ]
-    
+    ],
+    "contact": "Let's get in touch",
+    "contact-subheading" : "Feel free to reach out to me via email or connect with me on LinkedIn. I welcome any opportunity to connect and engage in meaningful conversations. If you have any questions, need assistance, or simply want to say hello, don't hesitate to drop me an email. I'm always eager to collaborate, share insights, and explore new ideas with like-minded professionals."
   }
