Navbar updated for dynamic lang translation

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -36,5 +36,9 @@
       }
     ],
     "contact": "Lassen Sie uns in Kontakt treten. 🔗",
-    "contact-subheading" : "Zögern Sie nicht, mich per E-Mail zu kontaktieren oder sich mit mir auf LinkedIn zu verbinden. Ich begrüße jede Gelegenheit, an bedeutungsvollen Gesprächen teilzunehmen. Ob Sie Fragen haben, Hilfe benötigen oder einfach nur Hallo sagen möchten, lassen Sie mir gerne eine E-Mail zukommen. Ich bin immer bereit zur Zusammenarbeit, zum Austausch von Erkenntnissen und zur Erkundung neuer Ideen mit gleichgesinnten Fachleuten. Ich freue mich darauf, in Kontakt zu treten! 📧"
+    "contact-subheading" : "Zögern Sie nicht, mich per E-Mail zu kontaktieren oder sich mit mir auf LinkedIn zu verbinden. Ich begrüße jede Gelegenheit, an bedeutungsvollen Gesprächen teilzunehmen. Ob Sie Fragen haben, Hilfe benötigen oder einfach nur Hallo sagen möchten, lassen Sie mir gerne eine E-Mail zukommen. Ich bin immer bereit zur Zusammenarbeit, zum Austausch von Erkenntnissen und zur Erkundung neuer Ideen mit gleichgesinnten Fachleuten. Ich freue mich darauf, in Kontakt zu treten! 📧",
+    "nav1": "Über mich",
+    "nav2": "Fähigkeiten",
+    "nav3": "Projekte",
+    "nav4": "Kontakt"
 }
