--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -36,5 +36,9 @@
       }
     ],
     "contact": "Let's get in touch 🔗",
-    "contact-subheading" : "Feel free to reach out to me via email or connect with me on LinkedIn. I welcome any opportunity to engage in meaningful conversations. Whether you have questions, need assistance, or just want to say hello, don't hesitate to drop me an email. I'm always eager to collaborate, share insights, and explore new ideas with like-minded professionals. Looking forward to connecting! 📧"
+    "contact-subheading" : "Feel free to reach out to me via email or connect with me on LinkedIn. I welcome any opportunity to engage in meaningful conversations. Whether you have questions, need assistance, or just want to say hello, don't hesitate to drop me an email. I'm always eager to collaborate, share insights, and explore new ideas with like-minded professionals. Looking forward to connecting! 📧",
+    "nav1" : "About",
+    "nav2" : "Skills",
+    "nav3" : "Projects",
+    "nav4" : "Contact"
   }
